--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
 }
@@ -34,5 +38,58 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+.font-face-gm {
+  font-family: "Amazon-font";
+}
+.amazon-bg {
+  background-image: url("../src/assets/amazon-bg.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.test {
+  width: 100wh;
+  color: #fff;
+  background: linear-gradient(-45deg, #e1e1e1, #e6bd07, #0c1364, #000000);
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
+}
+
+@-webkit-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@-moz-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
